tests/rosetta/out/C/character-codes-4.error
cc: exit status 1
/tmp/character-codes-4.c: In function ‘main’:
/tmp/character-codes-4.c:23:26: error: invalid operands to binary + (have ‘const char *’ and ‘char *’)
   23 |   printf("%s\n", chr(97) + " " + chr(960));
      |                  ~~~~~~~ ^
      |                  |       |
      |                  |       char *
      |                  const char *
/tmp/character-codes-4.c:24:25: error: invalid operands to binary + (have ‘const char *’ and ‘char *’)
   24 |   printf("%s\n", chr(b) + " " + chr(r));
      |                  ~~~~~~ ^
      |                  |      |
      |                  |      char *
      |                  const char *
