tests/rosetta/out/C/character-codes-4.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:36:01Z
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:36:01Z
#include <stdio.h>
#include <stdlib.h>

static int b = 97;
static int r = 960;

const char *chr(int n) {
  if (n == 97) {
    return "a";
  }
  if (n == 960) {
    return "π";
  }
  if (n == 65) {
    return "A";
  }
  return "?";
}

int main() {
  printf("%s\n", chr(97) + " " + chr(960));
  printf("%s\n", chr(b) + " " + chr(r));
  return 0;
}
